[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "poetry_test"}]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^5.0.4"
black = "^22.8.0"
pytest = "^7.1.3"
selenium = "^4.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
